<resources>
    <string name="app_name">Graphic Editor</string>
    <string name="navigation_drawer_open1">Open navigation drawer</string>
    <string name="navigation_drawer_close1">Close navigation drawer</string>
    <string name="nav_header_title1">OGsEditor</string>
    <string name="nav_header_subtitle1">by OGscompany</string>
    <string name="nav_header_desc1">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="menu_rotate">Поворот</string>
    <string name="menu_filter">Фильтры</string>
    <string name="menu_scale">Масштаб</string>
    <string name="menu_segment">Сегментация</string>
    <string name="menu_splane">Линии</string>
    <string name="menu_retush">Ретушь</string>
    <string name="menu_mask">Маскирование</string>
    <string name="menu_btf">Би- и трилинейная фильтрация</string>
    <string name="menu_save">Сохранить</string>
    <string name="menu_send1">Feedback(в разработке)</string>
    <string name="Edit">Редактор</string>
    <string name="Astar">A*</string>
    <string name="Astarblocked">A*(в разработке)</string>
    <string name="menu_rotateq">Поворот?</string>
    <string name="rd_yes">Да</string>
    <string name="rd_no">Нет</string>
    <string name="scale1">Нач. точка X</string>
    <string name="scale2">Нач. точка Y</string>
    <string name="scale3">Длина куска</string>
    <string name="scale4">Ширина куска</string>
    <string name="title_activity_editor">Editor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

</resources>
